<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_storluv_abouticon" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView1"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.thisisswitch.storelove.fonts.Textview_bold
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchlogotext1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="3dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_like_icon" />

        <com.thisisswitch.storelove.fonts.Textview_bold
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/switchlogotext2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <com.thisisswitch.storelove.fonts.Textview_bold
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aboutustext"
            android:textColor="@color/black"
            android:textSize="@dimen/text_15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_storluv_call" />

            <com.thisisswitch.storelove.fonts.Textview_bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:autoLink="phone"
                android:text="@string/aboutusphone"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_storluv_mail" />

            <com.thisisswitch.storelove.fonts.Textview_bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:autoLink="email"
                android:text="@string/aboutusmail"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_storluv_site" />

            <com.thisisswitch.storelove.fonts.Textview_bold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:autoLink="web"
                android:text="@string/web"
                android:textColor="@color/black"
                android:textSize="@dimen/text_15" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/logo_imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/imageView1"
        android:contentDescription="@null"
        android:src="@drawable/storluv_switch" />

</RelativeLayout>